# knowme

./: .SRCINFO  .gitignore  .npmignore  DEPLOYMENT.md  DEPLOYMENT_SYNC_GUIDE.md  FINAL_SUMMARY.md  GITHUB_SYNC_WORKFLOW.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION_GUIDE.md  MOBILE_FEATURES_SUMMARY.md  MOBILE_GUIDE.md  PKGBUILD  PROJECT_SUMMARY.md  QUICK_SYNC_GUIDE.md  README.md  TEXT_ASCII_UPDATE.md  apt-install.sh  build_all_packages.sh  build_packages.sh  build_snap.sh  direct-install.sh  install.js  install.ps1  install.sh  install_silent.py  knowme  knowme_1.0.5_all.deb  package.json  pyproject.toml  setup.py  setup_apt_repo.sh  setup_public_apt.sh  silent_install.py
Formula/: knowme.rb
apt-repo/: INSTALL_APT.md
apt-repo/dists/stable/: Release
apt-repo/dists/stable/main/binary-all/: Packages
apt/dists/stable/main/binary-amd64/: Packages
deb/: Packages  Release
debian_package/DEBIAN/: control  postinst
docs/: APT_INSTALL.md  KnowMeApp.js  index-react.html  index.html  script.js  style-react.css  style.css
docs/apt/dists/stable/: Release
docs/apt/dists/stable/main/binary-all/: Packages
docs/apt/pool/main/k/knowme/: knowme_1.0.5_all.deb
knowme/: __main__.py  ascii.py  logos.py  system_info.py
knowme.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prime/: pyvenv.cfg
prime/meta/: snap.yaml
site/: index.html  style.css
snap/: snapcraft.yaml
